@@ -23,7 +23,9 @@ module Spec
 
       describe "lifecycle" do
         before do
+          @original_rspec_options = $rspec_options
           @options = ::Spec::Runner::Options.new(StringIO.new, StringIO.new)
+          $rspec_options = @options
           @options.formatters << mock("formatter", :null_object => true)
           @options.backtrace_tweaker = mock("backtrace_tweaker", :null_object => true)
           @reporter = FakeReporter.new(@options)
@@ -41,6 +43,7 @@ module Spec
         end
 
         after do
+          $rspec_options = @original_rspec_options
           ExampleMethods.instance_variable_set("@before_all_parts", [])
           ExampleMethods.instance_variable_set("@before_each_parts", [])
           ExampleMethods.instance_variable_set("@after_each_parts", [])
@@ -48,28 +51,36 @@ module Spec
         end
 
         it "should pass before and after callbacks to all ExampleGroup subclasses" do
-          ExampleMethods.before(:all) do
+          ExampleMethods.before(:suite) do
             ExampleMethods.count.should == 1
           end
 
-          ExampleMethods.before(:each) do
+          ExampleMethods.before(:all) do
             ExampleMethods.count.should == 2
           end
 
-          ExampleMethods.after(:each) do
+          ExampleMethods.before(:each) do
             ExampleMethods.count.should == 3
           end
 
-          ExampleMethods.after(:all) do
+          ExampleMethods.after(:each) do
             ExampleMethods.count.should == 4
+          end
+
+          ExampleMethods.after(:all) do
+            ExampleMethods.count.should == 5
+          end
+
+          ExampleMethods.after(:suite) do
+            ExampleMethods.count.should == 6
           end
 
           @example_group = Class.new(ExampleGroup) do
             it "should use ExampleMethods callbacks" do
             end
           end
-          @example_group.run
-          ExampleMethods.count.should == 5
+          @options.run_examples
+          ExampleMethods.count.should == 7
         end
 
         describe "run_with_description_capturing" do
